--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ its content.
 
 * Content                                                                      :TOC:
 - [[#readings-of-the-year-2022][Readings of the year 2022]]
+  - [[#may-2022][May 2022]]
   - [[#april-2022][April 2022]]
   - [[#march-2022][March 2022]]
   - [[#february-2022][February 2022]]
@@ -31,6 +32,15 @@ its content.
 - [[#previous-readings][Previous readings]]
 
 * Readings of the year 2022
+
+** May 2022
+
+*** 01-May-22
++ [[https://www.glc.us.es/~jalonso/vestigium/pfh-la-semana-en-exercitium-del-25-al-30-de-abril/][#PFH: La semana en Exercitium (del 25 al 30 de abril)]]. #Haskell #ProgramaciónFuncional #Matemáticas
++ [[https://www.glc.us.es/~jalonso/vestigium/dao-la-semana-en-calculemus-del-25-al-30-de-abril/][#DAO: La semana en Calculemus (del 25 al 30 de abril)]]. #LeanProver #IsabelleHOL #Lógica #Matemática
++ [[https://www.isa-afp.org/browser_info/current/AFP/Fishers_Inequality/document.pdf][Fisher's inequality: Linear algebraic proof techniques for combinatorics]]. ~ Chelsea Edmonds, Lawrence C. Paulson. #ITP #IsabelleHOL #Math
++ [[https://arxiv.org/abs/2204.12311][Formalizing a diophantine representation of the set of prime numbers]]. ~ Karol Pąk, Cezary Kaliszyk. #ITP #Mizar #Math
++ [[https://arxiv.org/abs/2204.10370][Passport: Improving automated formal verification using identifiers]]. ~ Alex Sanchez-Stern, Emily First, Timothy Zhou, Zhanna Kaufman, Yuriy Brun, Talia Ringer. #ITP #Coq #MachineLearning
 
 ** April 2022
 
