--- a/README.org
+++ b/README.org
@@ -12,7 +12,6 @@ its content.
 * Content                                                                      :TOC:
 - [[#readings-of-the-year-2022][Readings of the year 2022]]
   - [[#may-2022][May 2022]]
-- [[#09-may-22][09-May-22]]
   - [[#april-2022][April 2022]]
   - [[#march-2022][March 2022]]
   - [[#february-2022][February 2022]]
@@ -36,7 +35,12 @@ its content.
 
 ** May 2022
 
-* 09-May-22
+*** 10-May-22
++ [[https://www.isa-afp.org/entries/Digit_Expansions.html][Digit expansions (in Isabelle/HOL)]]. ~ Jonas Bayer, Marco David, Abhik Pal, Benedikt Stock. #ITP #IsabelleHOL #Math
++ [[https://www.ndss-symposium.org/wp-content/uploads/NDSS2022Poster_paper_40.pdf][PA-Boot: A formally verified processor authentication protocol for SMP secure boot]]. ~ Zhuoruo Zhang, Rui Chang, Qinming Dai, Ku Ren. #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2205.03659][A theorem prover and countermodel constructor for provability logic in HOL Light]]. ~ Marco Maggesi, Cosimo Perini Brogi. #ITP #HOL_Light #Logic
+
+*** 09-May-22
 + [[https://arxiv.org/abs/2205.03159][Wetzel: Formalisation of an undecidable problem linked to the continuum hypothesis]]. ~ Lawrence C Paulson. #ITP #IsabelleHOL #Math
 
 *** 08-May-22
