--- a/README.org
+++ b/README.org
@@ -35,6 +35,9 @@ its content.
 
 ** May 2022
 
+*** 23-May-22
++ [[https://mmhaskell.com/blog/2022/5/23/using-binary-mode-in-haskell][Using binary mode in Haskell]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming
+
 *** 21-May-22
 + [[https://arxiv.org/abs/2205.06841v1][From logic to functional logic programs]]. ~ Michael Hanus. #LogicProgramming #FunctionalProgramming
 + [[https://www.cambridge.org/core/services/aop-cambridge-core/content/view/3A5329B6E3639879301A6D44346FD1DD/S1471068422000102a.pdf/fifty-years-of-prolog-and-beyond.pdf][Fifty years of Prolog and beyond]]. ~ P. Körner et als. #Prolog #LogicProgramming
